--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,11 @@
 npm-debug.log
 yarn-error.log
 
+# Backend Node
+backend/node_modules
+npm-debug.log
+yarn-error.log
+
 # IDEs and editors
 .idea/
 .project
